--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@notionhq/client": "^0.4.8",
     "@tailwindcss/forms": "^0.3.4",
     "autoprefixer": "^10.3.7",
     "clsx": "^1.1.1",
