--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@tailwindcss/forms": "^0.3.4",
     "autoprefixer": "^10.3.7",
     "clsx": "^1.1.1",
+    "install": "^0.13.0",
     "next": "^11.1.2",
+    "npm": "^8.3.0",
     "postcss": "^8.3.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-spring-carousel-js": "^1.9.30"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
