--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.4.8",
-    "@tailwindcss/forms": "^0.3.4",
-    "autoprefixer": "^10.3.7",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
     "clsx": "^1.1.1",
+    "daisyui": "^1.16.6",
     "install": "^0.13.0",
     "next": "^11.1.2",
     "npm": "^8.3.0",
-    "postcss": "^8.3.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -35,9 +35,7 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@types/react": "^17.0.30",
-    "@types/tailwindcss": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
@@ -45,9 +43,10 @@
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
     "next-sitemap": "^1.6.184",
+    "postcss": "^8.4.5",
     "prettier": "^2.4.1",
     "standard-version": "^9.3.1",
-    "tailwindcss": "^2.2.17",
+    "tailwindcss": "^3.0.7",
     "typescript": "^4.4.4"
   },
   "lint-staged": {
