--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
     "lint:strict": "eslint --max-warnings=0 src",
-    "tsc": "tsc",
-    "prettier:check": "prettier -c src",
-    "format": "prettier -w src",
+    "typecheck": "tsc --noEmit --incremental false",
+    "test:watch": "jest --watch",
+    "test": "jest",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
     "release": "standard-version",
     "push-release": "git push --follow-tags origin main",
     "postbuild": "next-sitemap",
@@ -21,6 +23,7 @@
     "@notionhq/client": "^0.4.8",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "tailwind-merge": "^1.1.1",
     "clsx": "^1.1.1",
     "daisyui": "^1.16.6",
     "install": "^0.13.0",
@@ -34,20 +37,32 @@
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
-    "@types/react": "^17.0.30",
+    "@tailwindcss/forms": "^0.4.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/react": "^17.0.38",
+    "@types/tailwindcss": "^2.2.4",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.4.0",
+    "babel-jest": "^27.4.5",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.1.2",
+    "eslint-config-next": "^11.1.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.2.3",
-    "next-sitemap": "^1.6.184",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.4.5",
+    "lint-staged": "^11.2.6",
+    "next-sitemap": "^1.6.203",
     "postcss": "^8.4.5",
-    "prettier": "^2.4.1",
-    "standard-version": "^9.3.1",
+    "prettier": "^2.5.1",
+    "prettier-plugin-sort-class-names": "^3.0.1",
+    "react-test-renderer": "^17.0.2",
+    "standard-version": "^9.3.2",
     "tailwindcss": "^3.0.7",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,}": [
