--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "@notionhq/client": "^0.4.8",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
-    "tailwind-merge": "^1.1.1",
     "clsx": "^1.1.1",
     "daisyui": "^1.16.6",
+    "history": "^5.2.0",
     "install": "^0.13.0",
     "next": "^11.1.2",
     "npm": "^8.3.0",
+    "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-spring-carousel-js": "^1.9.30"
+    "react-spring-carousel-js": "^1.9.30",
+    "tailwind-merge": "^1.1.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
