--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-spring-carousel-js": "^1.9.30",
-    "tailwind-merge": "^1.1.1"
+    "tailwind-merge": "^1.1.1",
+    "victory": "^36.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
