--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@egjs/flicking": "^4.4.2",
+    "@egjs/flicking-plugins": "^4.2.2",
+    "@egjs/react-flicking": "^4.4.3",
     "@notionhq/client": "^0.4.8",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
