--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@egjs/flicking": "^4.4.2",
     "@egjs/flicking-plugins": "^4.2.2",
     "@egjs/react-flicking": "^4.4.3",
+    "@matejmazur/react-katex": "^3.1.3",
     "@notionhq/client": "^0.4.8",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
@@ -30,6 +31,7 @@
     "daisyui": "^1.16.6",
     "history": "^5.2.0",
     "install": "^0.13.0",
+    "katex": "^0.15.2",
     "next": "^11.1.2",
     "npm": "^8.3.0",
     "qs": "^6.10.3",
