--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "dependencies": {
     "@egjs/flicking": "^4.4.2",
     "@egjs/flicking-plugins": "^4.2.2",
-    "@egjs/react-flicking": "^4.4.3",
+    "@egjs/react-flicking": "^4.5.3",
     "@matejmazur/react-katex": "^3.1.3",
     "@notionhq/client": "^0.4.8",
     "@tailwindcss/forms": "^0.4.0",
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-spring-carousel-js": "^1.9.30",
+    "react-tagcloud": "^2.2.0",
     "tailwind-merge": "^1.1.1",
     "victory": "^36.2.0"
   },
