--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@testing-library/react": "^12.1.2",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.38",
+    "@types/react-tagcloud": "^1.1.7",
     "@types/tailwindcss": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
